tests/miniJava/neg/005120_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java this int [] java ) { return 0 ; } }
